--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,6 +10,11 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
- *= require_self
  */
+@import 'jquery-ui';
+@import 'bootstrap';
+@import 'font-awesome';
+@import 'colors';
+@import 'home';
+@import 'header';
+
