Upgraded rails and misc
Upgraded rails to 4.2.0 (non-beta), wrangled the styling of the logo a
bit, created some failing tests.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,9 +13,11 @@
  */
 @import 'jquery-ui';
 @import 'bootstrap';
+//@import 'bootstrap-responsive';
 @import 'font-awesome';
 @import 'colors';
 @import 'home';
 @import 'header';
+@import 'restaurants';
 @import 'ratings';
 
