--- a/app/views/layouts/_top_border.html.haml
+++ b/app/views/layouts/_top_border.html.haml
@@ -1,21 +1,23 @@
-.row.body-element.topframe
-  .row
-    .col-lg-12
-      %ul.nav.navbar-nav.navbar-left
-        %li.col-lg-3
-          %span.pull-left
-            = link_to 'About', "#"
-        %li.col-lg-5
-          %span.pull-left
-            = link_to "Restaurants", "#"
-        %li.col-lg-2
-          %span.pull-left
-            = link_to "Jobs", "#"
-      %ul.nav.navbar-nav.navbar-right.col-lg-2
+%nav.navbar.navbar-default{:role => "navigation"}
+  .brand-slot
+    = link_to root_path do
+      .navbar-brand
+  .links-bar
+    .navbar-header
+      = button_tag "", class: "navbar-toggle collapsed", data: {target: "[data-role='navbar']", toggle: "collapse"} do
+        %span.sr-only Toggle navigation
+        %span.icon-bar
+        %span.icon-bar
+        %span.icon-bar
+    .collapse.navbar-collapse{data: {role: "navbar"}}
+      %ul.nav.navbar-nav
         %li
-          %span.pull-right.login-link
-            = link_to "Sign in", "#"
-  .bottom
-    %h1
-      dweedo
+          = link_to "About", "#"
+        %li
+          = link_to "Restaurants", restaurants_path
+        %li
+          = link_to "Jobs", "#"
+      %ul.nav.navbar-nav.navbar-right
+        %li
+          = link_to "Sign in", "#"
 
