Adding an address to a restaurant
Users can add an address when creating a restaurant.

--- a/app/views/restaurants/show.html.haml
+++ b/app/views/restaurants/show.html.haml
@@ -1,1 +1,7 @@
 = @restaurant.name
+= @restaurant.description
+- @restaurant.addresses.each do |address|
+  = address.street_address
+  = address.city
+  = address.state
+  = address.zip_code
