Kitchen sink of forgotten stuff I did

--- a/app/assets/stylesheets/ratings.scss
+++ b/app/assets/stylesheets/ratings.scss
@@ -10,3 +10,12 @@
   background-color: olivedrab;
 }
 
+.btn-ultimate-no {
+  background-color: gray;
+  color: #fff;
+}
+
+.ratings form {
+  margin-top: 20px;
+}
+
