--- a/app/views/restaurants/new.html.haml
+++ b/app/views/restaurants/new.html.haml
@@ -1,12 +1,3 @@
 .col-lg-12
   .col-lg-6
-    = bootstrap_form_for @restaurant do |f|
-      = f.text_field :name, placeholder: "Name", hide_label: true
-      = f.text_area :description, placeholder: "Description", hide_label: true
-      = f.fields_for :addresses do |address_form|
-        = address_form.text_field :street_address, placeholder: "Street address", hide_label: true
-        = address_form.text_field :city, placeholder: "City", hide_label: true
-        = address_form.text_field :state, placeholder: "State", hide_label: true
-        = address_form.text_field :zip_code, placeholder: "Zip code", hide_label: true
-      = f.submit "Get started"
-
+    = render "form"
