--- a/app/views/locations/show.html.haml
+++ b/app/views/locations/show.html.haml
@@ -1,4 +1,8 @@
 .hero-column.ratings
+  .row.restaurant-logo
+    = image_tag "lou-logo2x.png", height: 50, width: 150
+  .row
+    = image_tag "lincoln_square.JPG", height: 100, width: 150
   %h3
     Would you recommend
     %br
